@@ -32,6 +32,7 @@ $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyA
 - [browse] Properly display NULL value for BLOB.
 - rfe #1516803 [edit] Allow to set BLOB to/from NULL with ProtectBinary.
 - [edit] Do not default to UNHEX when using file upload.
+- rfe #1379201 [core] Add option to configure session_save_path.
 
 3.3.0.0 (not yet released)
 + rfe #2308632 [edit] Use hex for (var)binary fields,
